번역기능 수정 및 serverRequest 기능 수정

--- a/src/main/translations/ko-KR.json
+++ b/src/main/translations/ko-KR.json
@@ -1,6 +1,6 @@
 [
   { "key": "jet", "value": "Jet" },
-  { "key": "jet-label", "value": "a bluesky client" },
+  { "key": "jet-label", "value": "블루스카이 클라이언트" },
   { "key": "signin-title", "value": "로그인" },
   { "key": "signin-button", "value": "로그인" }
 ]
